# NELB-Agent

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEMO-AUTH-IMPLEMENTATION-PLAN.md  DEMO-VIDEO-SCRIPT.md  IMPLEMENTATION-PLAN.md  LICENSE  NELB-Chat-Architecture.md  NELB-System-Statement.md  PROJECT-DESCRIPTION.md  README.md  docker-compose.yml  nelb_stack_reference.md
backend/: .env.example  Dockerfile  add_thabo_history.py  alembic.ini  gitfiles.txt  pyproject.toml  seed.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: kernel.py  tools.py
backend/app/models/: __init__.py  allocation.py  client.py  job.py  job_history.py  reasoning_log.py  worker.py
backend/app/routes/: agent.py  health.py  run.py
backend/app/schemas/: agent.py
backend/app/services/: text_utils.py
backend/app/services/agent/: __init__.py  orchestrator.py
backend/app/services/allocation/: engine.py  enrichment.py
backend/app/services/assistant/: assist.py
backend/app/services/memory/: recall.py
backend/app/services/profile/: lookup.py
backend/tests/: test_allocation.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/employer/: page.tsx
frontend/src/components/: BackgroundGlow.tsx  CitedContent.tsx  FloatingChatInput.tsx  Header.tsx  MapPicker.tsx  PageTransition.tsx  Sidebar.tsx  StreamingText.tsx  ThemeProvider.tsx
frontend/src/lib/: agentChat.ts  api.ts  auth.ts  chatReset.ts  store.ts  theme.ts  useChatScroll.ts
(+3 files in other folders)
