[project]
name = "nelb-backend"
version = "0.1.0"
description = "NELB — No Employee Left Behind: AI reasoning agent for fair job distribution"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "semantic-kernel==1.42.0",
    "azure-identity==1.19.0",
    "azure-keyvault-secrets==4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
